hphp/hack/test/typecheck/finally_naming.php.exp
File "finally_naming.php", line 22, characters 10-11:
Undefined variable: $b (Naming[2050])
